* Installed RPC: getchainshieldinfo, chainshieldenabled, getchainbuddyinfo, chainshieldenabled
* Upgraded: Firewall to 2.0.0.2
* Upgraded: Uint256 with SetNull & IsNull https://gitlab.crown.tech/Edwardmorra/crown-core/commit/c655cca28ba620bdcf90a8c540c840c736aa318d
* Installed: DynamicCoinDistribution & Upgraded ASIC Choker
* Upgraded: Blockcount GUI

v1.0.0.7 (To Finish before release)
--------
* DDoS Shield & Firewall upgrades
* Masternode reward decentralization (Hard-Fork 1)
* New RPC: getasicchokerlog, blockshield, dynamiccheckpoint
* Transaction View Masternode payments / staking / mining

v1.0.0.6
--------
* Updated Checkpoints
* Updated Fixed Seednodes with active masternodes list
* Bitcoin Firewall 1.2.2.4
* Masternode manager GUI - Cleanup
* Stake Halving Bug Fixed
* Testnet Established
* Dark Theme Installed
* Darksend Amounts lowered
* About -> Information -> Open PHC.conf button
* About -> Information -> Open Masternode.conf button
* Masternodes -> My Masternodes -> Open Masternode.conf button

v1.0.0.5
--------
* Updated Checkpoints
* Improved Bitcoin Firewall 1.2.2.3
* Fixed GUI Masternode manager (Downloading List...)
* Fixed Large bandwidth usage from certain peers
* Fixed issue with Dynamic Block Reward 3.0

v1.0.0.4
--------
* Updated Checkpoints
* Reformatted Bitcoin Firewall 1.2.2.2 source code
* RPC & phc.conf support added to Bitcoin Firewall
* Fixed masternode status bug when started remotely
* Fixed GUI Start masternode without updating

v1.0.0.3
--------
* Updated Seednodes from current Masternodes
* Updated Checkpoints
* Fixed Core 8 Cnode::nSyncHeight
* Added Firewall logging to debug.log

v1.0.0.2
--------
* Updated Checkpoints
* Improved ForkFix from 1.0.0.1 (net.cpp)

v1.0.0.1
--------
* Bitcoin Firewall 1.2.2
* Fixed chain-forking in Bitcoin Core (net.cpp)

v1.0.0.0
--------
* Dynamic Block Reward 3.0 integration
* First stable release on new codebase



--------------------