@@ -48,6 +48,7 @@ LIBS += \
     -Wl,-B$(LMODE) \
     -l boost_system$(BOOST_LIB_SUFFIX) \
     -l boost_filesystem$(BOOST_LIB_SUFFIX) \
+    -l boost_chrono \
     -l boost_program_options$(BOOST_LIB_SUFFIX) \
     -l boost_thread$(BOOST_LIB_SUFFIX) \
     -l db_cxx$(BDB_LIB_SUFFIX) \
