@@ -1282,8 +1282,13 @@ int SecureMsgBuildBucketSet()
                 token.offset = ofs;
                 
                 errno = 0;
-                
+
+#if __ANDROID__                
+                if (fread(&smsg.hash[0], sizeof(uint8_t), 1, fp) != (size_t)SMSG_HDR_LEN)
+#else
+
                 if (fread(&smsg.hash[0], sizeof(uint8_t), SMSG_HDR_LEN, fp) != (size_t)SMSG_HDR_LEN)
+#endif
                 {
                     if (errno != 0)
                     {
