@@ -58,6 +58,7 @@ v1.0.0.7 (Pre-release - unfinished)
 * Upgraded: Uint256 with SetNull & IsNull https://gitlab.crown.tech/Edwardmorra/crown-core/commit/c655cca28ba620bdcf90a8c540c840c736aa318d
 * Installed: DynamicCoinDistribution & Upgraded ASIC Choker
 * Upgraded: Blockcount GUI
+* Added initial support for Android (Termux build of phcd)
 
 v1.0.0.7 (To Finish before release)
 --------
